[metadata]
name = pylint-secure-coding-standard
description = Pylint plugin adding some checks to make Python code adhere to more secure coding standard
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Takishima/pylint-secure-coding-standard
author = Damien Nguyen
author_email = ngn.damien@gmail.com
license = Apache2
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
py_modules = pylint_secure_coding_standard
python_requires = >=3.6
setup_requires =
  setuptools_scm[toml]
install_requires =
    pylint>=2

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
    pytest-mock


[bdist_wheel]
universal = True


# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """

# ==============================================================================
